--- a/templates/admin.takuapp.com.tmpl.j2
+++ b/templates/admin.takuapp.com.tmpl.j2
@@ -2,7 +2,7 @@
 upstream admin-api-prod {
 	ip_hash;   # sticky session by client ip
 {% raw %}
-	{{range service "takuapi@taku" "any"}}
+	{{range service "taku-api@taku" "any"}}
 	server {{.Address}}:{{.Port}} max_fails=1 fail_timeout=10s;
 	{{else}}
 	server localhost:3000;
