--- a/templates/api.takuapp.com.tmpl.j2
+++ b/templates/api.takuapp.com.tmpl.j2
@@ -1,7 +1,7 @@
 
 upstream cave-api-prod {
 {% raw %}
-	{{range service "takuapi@taku" "any"}}
+	{{range service "taku-api@taku" "any"}}
 	server {{.Address}}:{{.Port}} max_fails=1 fail_timeout=10s;
 	{{else}}
 	server localhost:3000;
@@ -13,7 +13,7 @@ upstream upload-api-prod {
 	ip_hash;   # sticky session by client ip
 
 {% raw %}
-	{{range service "takuapi@taku" "any"}}
+	{{range service "taku-api@taku" "any"}}
 	server {{.Address}}:{{.Port}} max_fails=1 fail_timeout=10s;
 	{{else}}
 	server localhost:3000;
