--- a/templates/api.takuapp.com.tmpl.j2
+++ b/templates/api.takuapp.com.tmpl.j2
@@ -1,8 +1,8 @@
 
 upstream cave-api-prod {
 {% raw %}
-	{{range service "taku-api@taku" "any"}}
-	server {{.Address}}:{{.Port}} max_fails=1 fail_timeout=10s;
+	{{range service "taku-api@taku" }}
+	server {{.Address}}:{{.Port}} max_fails=1 fail_timeout=30s;
 	{{else}}
 	server localhost:3000;
 	{{end}}
@@ -13,8 +13,8 @@ upstream upload-api-prod {
 	ip_hash;   # sticky session by client ip
 
 {% raw %}
-	{{range service "taku-api@taku" "any"}}
-	server {{.Address}}:{{.Port}} max_fails=1 fail_timeout=10s;
+	{{range service "taku-api@taku" }}
+	server {{.Address}}:{{.Port}} max_fails=1 fail_timeout=30s;
 	{{else}}
 	server localhost:3000;
 	{{end}}
