--- a/templates/stage.api.takuapp.com.tmpl.j2
+++ b/templates/stage.api.takuapp.com.tmpl.j2
@@ -3,7 +3,7 @@ upstream cave-api-stage{
 	ip_hash;   # sticky session by client ip
 
 {% raw %}
-	{{range service "stage-taku-api@taku" "any"}}
+	{{range service "stage-taku-api@taku" }}
 	server {{.Address}}:{{.Port}} max_fails=1 fail_timeout=10s;
 	{{else}}
 	server localhost:3000;
